themes/apotica-theme/source/_css/main.css
/* ... */
/* smaller screens */
@media only screen and (max-width:765px) {
	.advert {
		min-height: 580px;
	}
}

/* ****IPAD PRO *** */
@media screen and (min-width: 1024px) and (max-width: 1300px) {
	.attestation .four-column-grid > div {
		margin-bottom: 10%;
	}

	.container {
		width: 95%;
		margin-left: 2.5%;
		/* background-color: red; */
	}

	.attestation .full-width .container {
		width: 97%;
		margin-left: 1.5%;
		/* background-color: red; */
	}

	.lt-image-person {
		background-position: 20% center;
	}

	.testimonial {
		display: block;
		/* grid-template-columns: repeat(auto-fit,minmax(300px,1fr)); */
		height: 500px;
	}
	.box-info {
		background-color: var(--dark);
		color: var(--white) f;
		margin-top: 75px;
		margin-left: 0px;
		width: 100%;
		text-align: left;
		height: 230px;
	}

	.box-info > p {
		margin-left: 2%;
		margin-top: 10px;
		font-weight: 400;
		width: 100%;
		font-size: 20px;
	}
	.box-info > h1 {
		padding-top: 15px;
		margin-left: 2%;
		margin-top: 0px;
	}

	.testimonial-callout {
		position: relative;
		display: inline-block;
		margin-left: 20px;
		width: 1024px;
		margin-top: 60px;
	}

	.testimonial-details {
		margin-top: 55px;
		margin-left: 150px;
	}

	.testimonial-callout > svg {
		transform: scale(0.2);
		margin-top: -100px;
	}

	.testimonial-callout > blockquote {
		margin: 0;
		margin-left: 150px;
		padding: 0;
		width: 100%;
		color: var(--primary);
		font-size: 18px;
		font-weight: 550;
		/* margin-top: 100px; */
		/* margin-left: 35px; */
		/* position: absolute; */
	}

	.enterprise-security {
		overflow: hidden;
		height: 1200px;
		/* width: 768px; */
		position: relative;
	}
	.enterprise-security--content {
		display: block;
	}
	.enterprise-security--left {
		margin-left: 10px;
		margin-right: 15px;
	}

	.enterprise-security--left > p {
		font-size: 20px;
		min-width: 1024px;
		margin: 10px 0;
		font-weight: 400;
	}

	.enterprise-security--right > img {
		height: 900px;
		margin-top: 36px;
		align-self: center;
		margin-left: 16%;
	}

	.get-started--right {
		margin-left: 5%;
		margin-top: 180px;
		display: grid;
		grid-template-columns: repeat(2, 1fr);
	}
	.get-started--right > button {
		margin-right: 10%;
		width: 180px;
	}

	.get-started--left {
		margin-top: 20px;
		margin-left: 50px;
		color: var(--white);
		/* font-size: 24px; */
		position: absolute;
	}
	.get-started--left > h1 {
		margin: 10px 0;
		font-size: 26px;
	}
	.get-started--left > p {
		/* margin: 20px 0; */
		font-size: 24px;
	}

	.footer-content {
		margin: 0;
	}
}

/* set the width for very large screens */
@media only screen and (min-width: 1440px)  {
	.hero-text {
		width: 950px;
	}

	.hero-text-wrapper {
		margin-top: 12%;
	}

	.about-page__pictures {
		margin: 5% 0;
		margin-left: 10%;
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		grid-gap: 30px;
	}

	.banner {
		height: 100vh;
	}
}

/* override .app-dynamics hero for small resolutions  */
@media only screen and (min-width:980px)  and (max-width: 1366px){
	/* body {
		background: red;
	} */

	.app-dynamics .container-small {
    right: 6%;
	}

	.campaign-container .campaign-content .content-row {
    width: 90%;
	}

	.container-large .campaign-content .content-caption{
    width: 90%;
    font-weight: 900;
    font-size: 18px;
	}
	
	.app-dynamics .medium-hero .hero-text {
			width: 75%;
	}
}

@media screen and (min-width:769px) and (max-width: 1523px) {
	.nav-inner-content {
		/* margin-left: 0; */
		/* grid-template-columns: 6fr 3fr; */

		width: 90%;
    margin-left: 10%;
	}
}

